[tool.poetry]
name = "rt-formant"
version = "0.1.0"
description = ""
authors = ["Lenqth <nullptr00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pyaudio = "^0.2.13"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
scipy = "^1.10.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
autoflake = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
